--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+/***** Roboto Font import *****/
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap');
 
 .container {
@@ -7,6 +8,7 @@
     flex-wrap: wrap;
 }
 
+/***** MEDIA QUERIES *****/
 @media screen and (min-width: 48em) {
     .container {
         max-width: 75rem;
