--- a/src/components/Article.css
+++ b/src/components/Article.css
@@ -1,4 +1,5 @@
 .article {
+    max-width: 27rem;
     margin: 0 auto;
     padding: 1rem;
 }
@@ -35,10 +36,4 @@
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(14,129,192,1) 0%, rgba(17,165,196,1) 100%);
     white-space: nowrap;
     margin-top: 1rem;
-}
-
-@media screen and (min-width: 48em) {
-    .article {
-        width: 70%;
-    }
 }
